fix spacing on signup

--- a/style.css
+++ b/style.css
@@ -268,6 +268,10 @@ h4 {
   flex-direction: row;
 }
 
+.box.marseille{
+  max-height: 600px;
+}
+
 
 .loc:hover {
   box-shadow: 15px 15px 15px 15px;
@@ -483,5 +487,8 @@ footer ul {
   footer {
     display: flex;
     flex-direction: column;
+  }
+  nav a{
+    padding: 17px;
   }
 }
